Fix z-index of remove button and change phrasing of confirmation

--- a/static/styles/known_kanji.scss
+++ b/static/styles/known_kanji.scss
@@ -46,7 +46,7 @@ main {
     bottom: .5em;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 100;
+    z-index: 9;
 }
 
 #remove:hover {
